--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,9 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="./css/style.css">
 	</head>
-	<body>
-	<div class="container" id="app"></div>
-	<!-- <script src="/socket.io/socket.io.js"></script> -->
+	<body <%- stateClass %>>
+	<div class="container" id="app"><%- markup %></div>
 	<script src="js/build.js"></script>
 	</body>
 </html>
